# inferx

./: Makefile  README.md  docker-compose.yml  docker-compose_blob.yml
config/: Qwen2.5-Omni-3B.json  Qwen3-Omni-30B-A3B-Instruct-AWQ.json  Qwen3-Reranker-0.6B.json  Qwen3-TTS-12Hz-0.6B-CustomVoice.json  Qwen3-TTS-12Hz-1.7B-CustomVoice.json  inferx-bundle1.json  public.json  whisper-tiny.json
dashboard/: app.py  import_model_catalog.py
dashboard/sql/: audit.sql  billing.sql  create_table.sql  migrate_endpoints.sql  migrate_tenant_profile.sql  secret.sql
dashboard/static/: inference.js
dashboard/templates/: _catalog_deploy_target.html  _catalog_deploy_target_script.html  _client_setup.html  _metadata_picker_macros.html  _metadata_picker_script.html  _metadata_picker_styles.html  admin.html  admin_catalog.html  base.html  catalog_detail.html  catalog_list.html  endpoint_admin_edit.html  endpoint_detail.html  endpoints_list.html  func.html  func_create.html  func_list.html  func_user.html  help.html  node_list.html  pod_list.html  snapshot_list.html
deployment/: inferx_util.Dockerfile
doc/: billing-phase2-phase4-runbook.md  funcpolicy-priority-case-summary.md
inferxlib/src/obj_mgr/: func_mgr.rs  funcpolicy_mgr.rs  funcstatus_mgr.rs  tenant_mgr.rs
integration/: opencode.json
ixshare/: Cargo.toml
ixshare/src/: audit.rs  common.rs  node_config.rs
ixshare/src/gateway/: auth_layer.rs  func_agent_mgr.rs  func_worker.rs  gw_obj_repo.rs  http_gateway.rs  http_gw.rs  metrics.rs  mod.rs  secret.rs  tokenizer.rs
ixshare/src/scheduler/: scheduler_handler.rs
ixshare/src/state_svc/: admission.rs  state_svc.rs
k8s/: billing-cronjobs.yaml  billing-hourly-backfill-job.yaml  billing-quota-check-debug-pod.yaml  dashboard-nb.yaml  dashboard.yaml  db-audit.yaml  db-billing.yaml  db-secret.yaml  etcd.yaml  gateway.yaml  inferx-kb-pvc.yaml  keycloak_postgres.yaml  nodeagent.yaml  scheduler.yaml
k8s1/: billing-cronjobs.yaml  billing-sql-scripts-configmap.yaml  dashboard.yaml  gateway-servicemonitor.yaml  gateway.yaml  inferx-cache-copy.yaml  inferx-cache-pvc.yaml  ixproxy.yaml  kube-prometheus-stack-monitor-values.yaml  monitor-setup.md  nodeagent.yaml  scheduler.yaml
nodeconfig/: node.json  node_blob.json
test/: llm.md
test/script/: test.sh
test/script/bundle/: Dockerfile  makefile
test/script/docling/: Dockerfile  README.md  convert.py  count_tokens.py  crawl2md.py  entrypoint.sh  test.sh  test_dspy.py
test/script/kvtest/: Dockerfile  revyzor_test_stub.py
