[package]
name = "ixshare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inferxlib = { path = "../inferxlib" }

tonic = { version = "0.8" }
#tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio = { version = "1.25", features = ["full"] }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["net"] }
prost = "0.11"
hostname = "^0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
local-ip-address = "0.5.1"
gethostname = "0.4.3"
regex = "1.7.1"
zip = { version = "0.5", feature = [ "deflate" ] }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
simple-logging = "2.0.2"
log = "0.4.17"
log4rs = "1"
const_format = "0.2.30"
ipnetwork = "0.20.0"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.17.1"
async-trait = "0.1.77"
scopeguard = { version = "^1.1.0", default-features = false }
spin = "0.9.5"
etcd-client = "0.12.4"
rand = "0.8.5"
libc = "0.2.94"
pyo3 = { version = "0.20", features = ["extension-module"] }
nix = "0.23.1"
tokio-util = "0.7.11"
sysinfo = "0.31.4"
threadpool = "1.8.1"
errno = "0.2.4" 
libloading = "0.8.6"
crossbeam-channel = "0.5"
indexmap = "2.2"
lru = "0.12"
hex = "0.4"
#cpufeatures = "=0.2.13"

axum = "0.7.4"
hyper = { version = "1.7", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
http-body-util = "0.1"

dns-lookup = "2.0.4"
tower = "0.4.13"
sqlx = { version = "0.8.2", features = [ "runtime-tokio-rustls", "postgres", "macros", "chrono"] }
url = "2.4.0"
bollard = "=0.17.0"
tokio-seqpacket = "0.7.1"
tower-http = { version = "0.6.2", features = [ "cors" ] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
axum-extra = "0.10.0"
axum-keycloak-auth = "0.6"
rustls = { version = "0.23.5" }
keycloak = "21"

opentelemetry = { version = "0.31.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
opentelemetry-otlp = "0.31.0"
opentelemetry-prometheus = "0.29"
prometheus = "0.14"
http = "1.3.1"
prometheus-client = "0.24"
prometheus-client-derive-encode = "0.5.0"
notify = "8.2.0"
dashmap = "6.1.0"

minijinja = { version = "2.1", features = ["loader"] }

[dependencies.uuid]
version = "1.3.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.tokenizers]
version = "0.19"
default-features = false
features = ["onig", "esaxx_fast"]

[dependencies.hf-hub]
version = "0.4.3"
features = ["tokio", "rustls-tls"]

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[build-dependencies]
tonic-build = { version = "0.8" , features = ["prost"]}
